chore: Pacify SonarCloud (#60)